--- a/templates/student/_header_student.html.twig
+++ b/templates/student/_header_student.html.twig
@@ -26,7 +26,7 @@
             <a class="key_ftdw" href="{{path('student_contact')}}">Contact</a>   
         </li>
         <li class="hd-li hd_home-li left font-f1 key_bg3">
-            <a class="nav_a key_ftdw" href="{{path('subscribe')}}">S'incrire</a>           
+            <a class="nav_a key_ftdw" href="{{path('notYet')}}">Compte</a>           
         </li><hr>
         <li class="hd-li hd_home-li right font-f1 key_bg3">
             <a class="nav_a key_ftdw" href="{{path('home')}}">Déconnexion</a>              
