--- a/templates/instructor/_header_instructor.html.twig
+++ b/templates/instructor/_header_instructor.html.twig
@@ -23,7 +23,7 @@
             <a class="key_ftdw" href="{{path('instructor_formations')}}">Formations</a>
         </li>
         <li class="hd-li left font-f1">
-            <a class="key_ftdw" href="{{path('instructor_formation')}}">Formation</a>             
+            <a class="key_ftdw" href="{{path('formation_insert')}}">Formation</a>             
         </li>
         <li class="hd-li hd_home-li right font-f1 key_bg3">
             <a class="nav_a key_ftdw" href="{{path('home')}}">Déconnexion</a>              
