--- a/templates/student/formation_student.html.twig
+++ b/templates/student/formation_student.html.twig
@@ -33,7 +33,8 @@
                         <h3 class="section_title font-f1">Titre de la section</h3>
                     </div>
                     <div class="span_authorbox">
-                        <span class="span_author font-f3">Auteur: quelqu'un d'autre</span>
+                        <span class="font-f3">Auteur: quelqu'un d'autre</span>
+                        <span class="span_author font-f3">Date: </span>
                     </div>
                 </div>
                 <article class="lesson_article key_bg2">
@@ -46,6 +47,9 @@
                                 encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                         </iframe>
                     </div>
+                    <div class="lesson_articlep">
+                        <p></p>
+                    </div>
                 </article>
             </div>
             <div class="sections_side">
@@ -53,7 +57,7 @@
                     <div class="formations_sections">
                         <button class="section_button key_bg2 key_ftdw" onclick="dropdownLessons()">
                             <h3 class="section_h3 font-f1">Titre de le section</h3>
-                            <img class="section_buttonImg key_bg1"  
+                            <img class="section_buttonImg"  
                                 src="{{ asset('assets/storage/icons/gearPlanet.png') }}" 
                                 alt="rouages planète"
                                 title="icon by : https://icons8.com/icon/Qw0j4GWR9BWJ/gear">
