--- a/public/assets/studentPages/formation_student.scss
+++ b/public/assets/studentPages/formation_student.scss
@@ -17,6 +17,7 @@ $breakpoints: (
 .section_titlebox,
 .span_authorbox,
 .lesson_article,
+.lesson_articlep,
 .lesson_videoBox,
 .sections_wrapper,
 .section_button,
@@ -32,6 +33,7 @@ $breakpoints: (
 .lesson_displayside,
 .sections_side,
 .lesson_headbox,
+.span_authorbox,
 .lesson_article,
 .sections_wrapper {
   flex-direction: column;
@@ -44,6 +46,7 @@ $breakpoints: (
 .lesson_displayside,
 .sections_side,
 .formation_section,
+.lesson_article,
 .lesson_headbox,
 .lesson_videoBox,
 .sections_wrapper,
@@ -56,7 +59,8 @@ $breakpoints: (
 .formation_headOne,
 .formation_headTwo,
 .lesson_headbox,
-.lesson_videoBox {
+.lesson_videoBox,
+.lesson_articlep {
   justify-content: center;
 }
 
@@ -114,7 +118,7 @@ $breakpoints: (
 
   .lesson_headbox {
     width: 100%;
-    height: 100px;
+    height: 120px;
   }
 
   .section_title {
@@ -122,10 +126,19 @@ $breakpoints: (
     margin-bottom: 20px;
   }
 
+  .span_authorbox {
+    text-align: center;
+    line-height: 22px;
+  }
+
+  .span_author {
+    font-size: 13px;
+  }
+
   .lesson_article {
     width: 100%;
     border-top: 2px solid;
-    padding: 20px 0 20px 0;
+    padding: 20px 0 50px 0;
   }
 
   .lesson_title {
@@ -133,6 +146,12 @@ $breakpoints: (
     margin-right: auto;
     padding: 20px;
     text-decoration: underline;
+  }
+
+  .lesson_articlep {
+    width: 85%;
+    margin: 30px 0 20px 0;
+    font-size: 20px;
   }
 }
 
@@ -350,7 +369,8 @@ $breakpoints: (
     .formation_headOne {
       flex-direction: row;
       justify-content: center;
-      width: 72%;
+      width: 70%;
+      margin-left: 35px;
       margin-right: auto;
       background-color: black;
     }
