Add student search functionnality

--- a/templates/base/formations.html.twig
+++ b/templates/base/formations.html.twig
@@ -24,6 +24,7 @@
                         title="Icon by MD Badsha Meah : https://freeicons.io/profile/3335">
                 </button>
             </form>
+            {# <h3>Résultats pour : {{ search }}</h3> #}
         </div>
     </section>
     <section class="section_main">
