--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -71,7 +71,7 @@
 
             <div class="home_btn-wrap">
                 <div class="home-btnbox">
-                    <form action="{{path('subscribe')}}">
+                    <form action="{{path('register')}}">
                         <button class="home-btn key_bg3 key_ftdw" type="submit">S'incrire</button>
                     </form>
                 </div>
