--- a/templates/student/_header_student.html.twig
+++ b/templates/student/_header_student.html.twig
@@ -29,7 +29,7 @@
             <a class="nav_a key_ftdw" href="{{path('notYet')}}">Compte</a>           
         </li><hr>
         <li class="hd-li hd_home-li right font-f1 key_bg3">
-            <a class="nav_a key_ftdw" href="{{path('home')}}">Déconnexion</a>              
+            <a class="nav_a key_ftdw" href="{{path('logout')}}">Déconnexion</a>              
         </li>
     </ul>
 </nav>
