--- a/public/assets/pages/login.scss
+++ b/public/assets/pages/login.scss
@@ -84,6 +84,7 @@ section {
   }
 
   input[type="text"],
+  input[type="email"],
   input[type="password"] {
     width: 100%;
     margin-top: 5px;
