--- a/templates/Login/login.html.twig
+++ b/templates/Login/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Log in{% endblock %}
 {% block styleSheets %}
     <link rel="stylesheet" href="{{ asset('assets/pages/login.css') }}">
 {% endblock %}
@@ -10,7 +10,6 @@
 {% endblock %}
 
 {% block main %}
-
     <section>
         <div class="login_wrapper">
             <div class="login_title-box key_bg2">
@@ -23,15 +22,25 @@
                          alt="astronaut"
                          title="https://www.freepng.fr">
                 </div>
-                {# {% if error %}
-                <div>{{ error.messageKey | trans(error.messageData, 'security') }}</div>
-                {% endif %} #}
                 <div class="form_box key_bg3">
-                    <form action="" method="post">
-                        <label class ="key_ftdw font-f2" for="username"><strong>Email</strong></label>
-                        <input type="text" id="username" name="_username" placeholder="Enter Email"/>
-                        <label class ="key_ftdw font-f2" for="password"><strong>Password</strong></label>
-                        <input type="password"  id="password" name="_password" placeholder="Enter Password"/>
+                    <form method="post">
+                    {# action="{{ path('login') }}" #}
+                        {% if error %}
+                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
+
+                        {# {% if app.user %}
+                            <div class="mb-3">
+                                Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('logout') }}">Logout</a>
+                            </div>
+                        {% endif %} #}
+                        <label class ="key_ftdw font-f2" for="inputEmail"><strong>Email:</strong></label>
+                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" placeholder="Enter Email" autocomplete="email" required autofocus/>
+                        <label class ="key_ftdw font-f2" for="inputPassword"><strong>Password</strong></label>
+                        <input type="password" name="password" id="inputPassword" placeholder="Enter Password" autocomplete="current-password" required/>
+                        <input type="hidden" name="_csrf_token"
+                            value="{{ csrf_token('authenticate') }}"
+                        >
                         {# Control Url user is redirected to on success 
                         <input type="hidden" name="_target_path" value="/account"/> #}
                         <button class="button_login key_ftw font-f3 key_bggreen" type="submit">Login</button>
@@ -43,12 +52,11 @@
                         <form action="{{path('home')}}">
                             <button class="button_cancel key_ftw font-f3 key_bgred" type="submit">Cancel</button>
                         </form>
+                        <span class="span_password key_ftdw font-f3"><a class="key_ftd" href="{{ path('register')}}">S'inscrire</a></span>
                         <span class="span_password key_ftdw font-f3">Forgot <a class="key_ftd" href="#">password ?</a></span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    
 {% endblock %}
