--- a/templates/base/_header.html.twig
+++ b/templates/base/_header.html.twig
@@ -15,6 +15,15 @@
         <div class="hd-iconNav headNav-icon3 key_bgdw"></div>
     </button>
     <ul id="dropdown" class="hd-dropdownContent">
+         {# {% if app.user %}
+            <div class="mb-3">
+                Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('logout') }}">Logout</a>
+            </div>
+
+            ajout options nav (déco, formations etc.)
+            {% else %}
+            options me connecter
+        {% endif %} #}
         <li class="hd-li1"></li>
         <li class="hd-li right font-f1">
             <a class="key_ftdw" href="{{path('formations')}}">Formations</a>
@@ -26,7 +35,7 @@
             <a class="key_ftdw" href="{{path('contact')}}">Contact</a>   
         </li>
         <li class="hd-li hd_home-li left font-f1 key_bg3">
-            <a class="nav_a key_ftdw" href="{{path('subscribe')}}">S'incrire</a>           
+            <a class="nav_a key_ftdw" href="{{path('register')}}">S'incrire</a>           
         </li><hr>
         <li class="hd-li hd_home-li right font-f1 key_bg3">
             <a class="nav_a key_ftdw" href="{{path('login')}}">Connexion</a>              
