--- a/public/assets/studentPages/formations_student.scss
+++ b/public/assets/studentPages/formations_student.scss
@@ -17,7 +17,7 @@ $breakpoints: (
 .formation_title,
 .instructor_imgbox,
 .preview_button,
-.preview_box {
+.preview-box {
   display: flex;
 }
 
@@ -43,7 +43,7 @@ $breakpoints: (
 .formation_container,
 .instructor_imgbox,
 .preview_button,
-.preview_box {
+.preview-box {
   align-items: center;
 }
 
@@ -52,11 +52,11 @@ $breakpoints: (
 .button_search,
 .instructor_imgbox,
 .preview_button,
-.preview_box {
+.preview-box {
   justify-content: center;
 }
 
-.preview_box {
+.preview-box {
   align-items: flex-start;
 }
 
@@ -125,6 +125,7 @@ $breakpoints: (
   margin-bottom: 50px;
 
   .formation_globalwrapper {
+    position: relative;
     transition: 0.3s ease;
     margin-bottom: 30px;
   }
@@ -181,30 +182,30 @@ $breakpoints: (
   .preview_button {
     position: absolute;
     right: 20px;
-    bottom: 10px;
+    top: 110px;
     width: 80px;
     height: 25px;
     border-radius: 50px;
     box-shadow: 1px 1px 6px #000;
-    // cursor: pointer;
     border: none;
     z-index: 2;
   }
 
-  .preview_box {
+  .preview-box {
     display: none;
-    width: 95%;
-    height: 120px;
     margin-left: auto;
     margin-right: auto;
-    overflow: auto;
+    width: 95%;
+    padding: 8px;
+    box-shadow: 1px 1px 6px #000;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    box-shadow: 1px 1px 6px #000;
   }
 
   .preview_p {
+    display: block;
     padding: 20px;
+    z-index: 2;
   }
 
   .showPreview {
