--- a/public/assets/pages/subscribe.scss
+++ b/public/assets/pages/subscribe.scss
@@ -75,6 +75,10 @@ section {
   padding: 20px 0 20px 0;
 }
 
+.input1 {
+  display: none;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="password"] {
