--- a/templates/instructor/formations_instructor.html.twig
+++ b/templates/instructor/formations_instructor.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-    {% include "instructor/_header_instructor.html.twig" %}
+    {% include "base/_header.html.twig" %}
 {% endblock %}
 
 {% block main %}
