--- a/templates/student/formations_student.html.twig
+++ b/templates/student/formations_student.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-    {% include "student/_header_student.html.twig" %}
+    {% include "base/_header.html.twig" %}
 {% endblock %}
 
 {% block main %}
@@ -55,7 +55,7 @@
             {% endif %} 
         {% endfor %} 
 
-        <div class="formation_globalwrapper key_bg3">
+        <div class="formation_globalwrapper">
                 <div class="formation_container key_bg2">
                     <div class="formation_title">
                         <h3 class="formation_h3 key_ftdw font-f1"></h3>
