--- a/templates/Login/apply.html.twig
+++ b/templates/Login/apply.html.twig
@@ -24,23 +24,21 @@
                          title="title="https://www.freepng.fr"">
                 </div>
                 <div class="form_box key_bg3">
-                    <form action="" method="post">
-                        <label class ="key_ftdw font-f2" for="name"><strong>Nom</strong></label>
-                        <input type="text" id="name" name="_surname" placeholder="Nom"/>
-                        <label class ="key_ftdw font-f2" for="name"><strong>Prénom</strong></label>
-                        <input type="text" id="name" name="_surname" placeholder="Prénom"/>
-                        <label class ="key_ftdw font-f2" for="username"><strong>Email</strong></label>
-                        <input type="text" id="username" name="_username" placeholder="Enter Email"/>
-                        <label class ="key_ftdw font-f2" for="password"><strong>Password</strong></label>
-                        <input type="password"  id="password" name="_password" placeholder="Enter Password"/>
-                        <label class ="key_ftdw font-f2" for="description"><strong>Spécialités</strong></label>
-                        <textarea id="description" name="_description" placeholder="Enter a description" rows="6" cols="50"/></textarea>
-                        <label class ="key_ftdw font-f2" for="file"><strong>Importer votre photo</strong></label>
-                        <input type="file" id="file" name="_file">
-                        {# Control Url user is redirected to on success 
-                        <input type="hidden" name="_target_path" value="/account"/> #}
+                    {{ form_start(applyForm, { 'attr' : { 'class': 'form' } }) }}
+                        <div class="input1">
+                            {{ form_row(applyForm.pseudo, { label: 'Pseudo', 'attr' : { 'class': 'input1 key_ftdw font-f2', 'placeholder': 'Pseudonyme' } }) }}
+                        </div>
+                        {{ form_row(applyForm.name, { label: 'Name', 'attr' : { 'class': 'key_ftdw font-f2', 'placeholder': 'Nom' } }) }}
+                        {{ form_row(applyForm.surname, { label: 'Surname', 'attr' : { 'class': 'key_ftdw font-f2', 'placeholder': 'Prénom' } }) }}
+                        {{ form_row(applyForm.email, { label: 'Email', 'attr' : { 'class': 'key_ftdw font-f2', 'placeholder': 'Enter Email' } }) }}
+                        {{ form_row(applyForm.plainPassword, {
+                            label: 'Password', 
+                            'attr' : { 'class': 'input key_ftdw font-f2', 'placeholder': 'Enter password' } }) }}
+                        {# {{ form_row(applyForm.Rgpd-Consent) }} #}
+                        {{ form_row(applyForm.description, { label: 'Description', 'attr' : { 'class': 'key_ftdw font-f2', 'placeholder': 'Description' } }) }}
+                        {{ form_row(applyForm.photo, { label: 'Photo', 'attr' : { 'class': 'key_ftdw font-f2 key_bg1', 'placeholder': 'Photo Profil' } }) }}
                         <button class="button_apply key_ftw font-f3 key_bggreen" type="submit">Postuler</button>
-                    </form>
+                    {{ form_end(applyForm) }}
                     <div class="cancel_box key_bg1">
                         <form action="{{path('home')}}">
                             <button class="button_cancel key_ftw font-f3 key_bgred" type="submit">Cancel</button>
