--- a/templates/Login/subscribe.html.twig
+++ b/templates/Login/subscribe.html.twig
@@ -25,7 +25,14 @@
                 </div>
                 <div class="form_box key_bg3">
                     {{ form_start(registrationForm, { 'attr' : { 'class': 'form' } }) }}
-                        {{ form_row(registrationForm.pseudo, { label: 'Pseudo', 'attr' : { 'class': 'input key_ftdw font-f2', 'placeholder': 'Pseudonyme' } }) }}
+                        <div class="input1">
+                            {{ form_row(registrationForm.name, { label: 'name', 'attr' : { 'class': 'input1 key_ftdw font-f2', 'placeholder': 'Naom' } }) }}
+                            {{ form_row(registrationForm.surname, { label: 'surname', 'attr' : { 'class': 'input1 key_ftdw font-f2', 'placeholder': 'Prénom' } }) }}
+                            {{ form_row(registrationForm.description, { label: 'Description', 'attr' : { 'class': 'input1 key_ftdw font-f2', 'placeholder': 'Description' } }) }}
+                            {{ form_row(registrationForm.photo, { label: 'Photo', 'attr' : { 'class': 'input1 key_ftdw font-f2', 'placeholder': 'Photo Profil' } }) }}
+                        </div>
+                        
+                        {{ form_row(registrationForm.pseudo, { label: 'Pseudo', 'attr' : { 'class': 'input key_ftdw font-f2', 'placeholder': 'Pseudonyme' } }) }}    
                         {{ form_row(registrationForm.email, { label: 'Email', 'attr' : { 'class': 'input key_ftdw font-f2', 'placeholder': 'Enter Email' } }) }}
                         {{ form_row(registrationForm.plainPassword, {
                             label: 'Password', 
