--- a/templates/admin/home_admin.html.twig
+++ b/templates/admin/home_admin.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-    {% include "admin/_header_admin.html.twig" %}
+    {% include "base/_header.html.twig" %}
 {% endblock %}
 
 {% block main %}
