--- a/templates/student/formation_student.html.twig
+++ b/templates/student/formation_student.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-    {% include "student/_header_student.html.twig" %}
+    {% include "base/_header.html.twig" %}
 {% endblock %}
 
 {% block main %}
