--- a/templates/Login/apply.html.twig
+++ b/templates/Login/apply.html.twig
@@ -33,7 +33,7 @@
                             'attr' : { 'class': 'input key_ftdw font-f2', 'placeholder': 'Enter password' } }) }}
                         {# {{ form_row(applyForm.Rgpd-Consent) }} #}
                         {{ form_row(applyForm.description, { label: 'Description', 'attr' : { 'class': 'key_ftdw font-f2', 'placeholder': 'Description' } }) }}
-                        {# {{ form_row(applyForm.imageFile, { label: 'Photo', 'attr' : { 'class': 'key_ftdw font-f2 key_bg1', 'placeholder': 'Photo Profil' } }) }} #}
+                        {{ form_row(applyForm.imageFile, { label: 'Photo', 'attr' : { 'class': 'key_ftdw font-f2 key_bg1', 'placeholder': 'Photo Profil' } }) }}
                         <button class="button_apply key_ftw font-f3 key_bggreen" type="submit">Postuler</button>
                     {{ form_end(applyForm) }}
                     <div class="cancel_box key_bg1">
